--- a/Aula_JavaScript_01.html
+++ b/Aula_JavaScript_01.html
@@ -3,12 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Exemplo JavaScript 01</title>
-<!--<script>
-    function dataHora(){
-        document.getElementById('demo').innerHTML = Date();
-    }
-</script>-->
-<!--<script src="script-01.js"></script>-->
+
+<script src="script-01.js"></script>
 
 <body>
 
@@ -16,23 +12,33 @@
 
 <!--Olá Mundo-->
 <!--<button type="button"
-    onclick="document.getElementById('demo').innerHTML = 'Olá Mundo!'">
+    onclick="document.getElementById('demo').innerHTML = 'Framengo!'">
 Clique para mostrar uma mensagem.
+</button>
+<br>
+<br>
+<button type="button"
+    onclick="document.getElementById('fla').innerHTML = 'Palmeiras não tem mundial!'">
+Clique para mostrar outra mensagem.
 </button>-->
-
 <!--Exemplo sem function -->
+
 <!--<button type="button"
     onclick="document.getElementById('demo').innerHTML = Date()">
 Clique para mostrar Data e hora.
-</button>-->
+</button>
 
-<!--Exemplo com function -->
-<!--<button type="button"
-    onclick="dataHora()">
+<! Exemplo com function -->
+<button type="button"
+    onclick="dataHora02('demo')">
 Clique para mostrar Data e hora.
-</button>-->
+</button>
 
 <p id="demo"></p>
+
+<br>
+
+<!--<p id="fla"></p>-->
 
 </body>
 </html> 
